Really fix missing quotation mark

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Submitted to <i> Computational Linguistics</i> for review <a href="http://arxiv.
 <hr>
 <h2>Other</h2>
 <p>I created <a href="http://www.scrabblist.com/">Scrabblist.com</a> in my spare time.</p>
-<p>You can also find me on <a href="http://twitter.com/daarkecloud>Twitter"</a>.</p>
+<p>You can also find me on <a href="http://twitter.com/daarkecloud">Twitter</a>.</p>
 
 </div>
 </body>
