--- a/index.html
+++ b/index.html
@@ -20,16 +20,11 @@ text-decoration:none;
 <img src="daoud.jpg" align=right>
 <h1>Daoud Clarke's Homepage</h1>
 
-
-Text Mining Analyst
-<br><a href="http://www.herts.ac.uk/cs">School of Computer Science</a>
-<br><a href="http://www.herts.ac.uk/">University of Hertfordshire</a>
-<br>Email: daoud (at) metrica (dot) net
+<br>I'm currently working for Gorkana Group as a Text Mining Solutions Architect. You can contact me at daoud (dot) clarke (at) gorkana.com.
 <br>
-<br>Working as a <a href="http://www.ktponline.org.uk">KTP Associate</a> for <a href="http://www.metrica.net">Metrica</a>.
+<br>I recently completed a <a href="http://www.ktponline.org.uk/">Knowledge Transfer Partnership</a> project with the University of Hertfordshire and Metrica.
 <br>
 <br>
-
 <hr>
 <h2>Research Interests</h2>
 <p>
@@ -41,46 +36,24 @@ supervisor was <a href="http://www.cogs.susx.ac.uk/users/davidw/">David Weir</a>
 </p>
 
 <p>
-I'm also interested in machine learning, specifically applied to sentiment analysis. My work at Metrica has involved the development of a state-of-the-art sentiment analysis system using the open source machine learning framework <a href="http://www.cs.waikato.ac.nz/ml/weka/">Weka</a>. My supervisors are <a href="http://www.metrica.net/whoweare/Content1a.htm">Paul Hender</a> and <a href="http://homepages.feis.herts.ac.uk/~comqpcl/">Peter Lane</a>.
+I'm also interested in applications of machine learning and natural language processing, in particular topic clustering, sentiment analysis and named entity recognition.
 </p>
 
 <p>
-I previously worked at <a href="http://www.delcam.com">Delcam</a> developing machining algorithms for their flagship product <a href="http://www.powermill.com">PowerMILL</a>.
+I previously worked at <a href="http://www.delcam.com">Delcam</a> developing machining algorithms for their core library, primarily used in their flagship product <a href="http://www.powermill.com">PowerMILL</a>.
 </p>
 <hr>
 <h2>Publications</h2>
 
-<p> Daoud Clarke, David Weir and Rudi Lutz (2011) <a href="publications/iwcs-2011.pdf">Algebraic Approaches to Compositional Distributional Semantics</a>. In <i> Proceedings of the International Workshop on Computational Semantics</i> (IWCS-2011).  <a href="publications/iwcs-poster.pdf">(Poster)</a></p>
-
-<p> Daoud Clarke, Rudi Lutz and David Weir (2010) <a href="publications/semantic-composition-quotient-algebra.pdf">Semantic
-Composition with Quotient Algebras</a>. In <i> Proceedings of Geometric
-Models of Natural Language Semantics</i> (GEMS-2010).  <a href="publications/gems-pres.pdf">Slides are also available</a>.</p>
-
-<p>Daoud Clarke (2009) <a href="publications/context-theoretic-semantics-overview.pdf">Context-theoretic
-Semantics for Natural Language: an Overview</a>. In <i>Proceedings of Geometric Models of Natural Language Semantics</i>
-pp. 112-119.
-</p>
-
-<p>Daoud Clarke (2007) <a href="publications/context-theoretic-semantics-thesis.pdf"><i>Context-theoretic
-Semantics for Natural Language: an Algebraic Framework</i></a>. DPhil
-thesis, University of Sussex.</p>
-
-<p>Daoud Clarke (2006) <a href="publications/meaning-as-context-subsequence.pdf">Meaning as
-Context and Subsequence Analysis for Entailment</a>. In <i>Proceedings
-of the Second PASCAL Challenges Workshop on Recognising Textual
-Entailment</i>, pages 134-139.</p>
-
-<h2>Preprints</h2>
-<p>
-
-<p>Daoud Clarke (2011) <a href="publications/context-distributional-semantics.pdf">A Context-theoretic Framework for Computational Semantics</a>. 
-Submitted to <i> Computational Linguistics</i> for review <a href="http://arxiv.org/abs/1101.4479v1">(arXiv)</a>.</p>
-</p>
+...can be found on my <a href="http://scholar.google.co.uk/citations?user=VKRP3DoAAAAJ&hl=en">Google Scholar</a> page.
 
 <hr>
 <h2>Other</h2>
-<p>I created <a href="http://www.scrabblist.com/">Scrabblist.com</a> in my spare time.</p>
-<p>You can also find me on <a href="http://twitter.com/daarkecloud">Twitter</a>.</p>
+<ul>
+<li>My uncle's <a href="https://github.com/daoudclarke/wartonlegacy">cryptanalysis code on github</a>.
+<li>I created <a href="http://www.scrabblist.com/">Scrabblist.com</a> in my spare time.
+<li>You can also find me on <a href="http://www.linkedin.com/pub/daoud-clarke/8/405/981">LinkedIn</a>.
+</ul>
 
 </div>
 </body>
