Make index a bit better

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        margin: 60px 0;
+        margin: 30px 0 0 0;
         text-align: center;
       }
       .jumbotron h1 {
@@ -40,7 +40,7 @@
 
       /* Supporting marketing content */
       .marketing {
-        margin: 60px 0;
+        /*margin: 60px 0;*/
       }
       .marketing p + h4 {
         margin-top: 28px;
@@ -71,47 +71,74 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="muted">Project name</h3>
+        <h3 class="muted">Machine Learning in Practice</h3>
       </div>
 
       <hr>
 
-      <div class="jumbotron">
-        <h1>Super awesome marketing speak!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+      <div class="row-fluid jumbotron">
+        <h1>No nonsense machine learning</h1>
+        <p class="lead">
+	  Sign up to our newsletter to receive:
+	</p>
+        <!-- <a class="btn btn-large btn-success" href="#">Sign up today</a> -->
       </div>
-
-      <hr>
 
       <div class="row-fluid marketing">
-        <div class="span6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+	<div class="span4">
+	  <h4>Free e-book</h4>
+	  <p> <i>Seven Steps to Success: Machine Learning in
+	      Practice</i> </p>
+	  <!--   details a practical approach to applying -->
+	  <!-- machine learning in your organisation, based on years of -->
+	  <!-- experience applying machine learning in industry.</p> -->
+	</div>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+	<div class="span4">
+	  <h4>News</h4>
+	  <p>How machine learning is being applied in industry
+	  </p>
+	</div>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
+	<div class="span4">
+	  <h4>Updates</h4>
+	  <p>Related events and opportunities
+	  </p>
+	</div>
 
-        <div class="span6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
       </div>
 
+      <div class="row-fluid jumbotron">
+
+<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form class="form-inline" action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  <!-- <h2>Subscribe to our mailing list</h2> -->
+<!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
+<!-- <div class="mc-field-group"> -->
+<!--   <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> -->
+<!-- </label> -->
+  <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
+<!-- </div> -->
+<!-- <div id="mce-responses" class="clear"> -->
+<!--   <div class="response" id="mce-error-response" style="display:none"></div> -->
+<!--   <div class="response" id="mce-success-response" style="display:none"></div> -->
+<!-- </div> -->
+<!-- <div class="clear"> -->
+<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
+<!-- </div> -->
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+	<!-- <div class="span4"> -->
+
+	<!-- </div> -->
+      </div>
       <hr>
 
       <div class="footer">
-        <p>&copy; Company 2013</p>
+        <p>&copy; Daoud Clarke 2013</p>
       </div>
 
     </div> <!-- /container -->
