Add signup form

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
       .jumbotron .btn {
         font-size: 21px;
-        padding: 14px 24px;
+        padding: 7px 15px;
       }
 
       /* Supporting marketing content */
@@ -110,29 +110,16 @@
 
       <div class="row-fluid jumbotron">
 
-<!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
-<form class="form-inline" action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-  <!-- <h2>Subscribe to our mailing list</h2> -->
-<!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
-<!-- <div class="mc-field-group"> -->
-<!--   <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> -->
-<!-- </label> -->
-  <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
-<!-- </div> -->
-<!-- <div id="mce-responses" class="clear"> -->
-<!--   <div class="response" id="mce-error-response" style="display:none"></div> -->
-<!--   <div class="response" id="mce-success-response" style="display:none"></div> -->
-<!-- </div> -->
-<!-- <div class="clear"> -->
-<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
-<!-- </div> -->
-</form>
-</div>
-
-<!--End mc_embed_signup-->
+	<!-- Begin MailChimp Signup Form -->
+	<div id="mc_embed_signup">
+	  <form class="form-inline" action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	    <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
+	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
+	  </form>
+	  <p><i>You will receive a link to your free e-book on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time.</i></p>
+	</div>
+	<!--End mc_embed_signup-->
 	<!-- <div class="span4"> -->
-
 	<!-- </div> -->
       </div>
       <hr>
