Fix a few symbols etc.

--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@ consider are
 <li> high <b>recall</b> is important when combining machine
   learning with manual analysis to produce a combined system with high
   overall accuracy.
-<li><b>f1 score</b>, or more generally f$\beta$ score is useful
-  when a trade-off between precision and recall is needed, and $\beta$
+<li><b>F<sub>1</sub> score</b>, or more generally F<sub>&beta;</sub> score is useful
+  when a trade-off between precision and recall is needed, and &beta;
   can be adjusted to prefer one over the other.
 </ul>
 
 
-<h3>Customer Service at Direct Electric</h3>
+<h4>Customer Service at Direct Electric</h4>
 
 <p>
 Direct Electric are a large electricity company based in the south of
