Add chapter headings

--- a/index.html
+++ b/index.html
@@ -249,6 +249,27 @@ some articles that aren't really negative?&rdquo; She is thinking of trying
 to build a system with high recall, which will probably mean lower
 precision.</p><p>&ldquo;That would be fine,&rdquo; says Dave. &ldquo;After all, at the moment, we're
 reading them all.&rdquo;</p>
+
+	<hr>
+	<p><i>Sign up below to read all seven chapters:</i></p>
+	<h4>1. Clearly understand the business need</h4>
+	<h4>2. Know what's possible</h4>
+	<h4>3. Know the data</h4>
+	<h4>4. Plan for change</h4>
+	<h4>5. Avoid premature optimisation</h4>
+	<h4>6. Mitigate risks</h4>
+	<h4>7. Use common sense</h4>
+	<hr>
+	<!-- Begin MailChimp Signup Form -->
+	<div id="mc_embed_signup">
+	  <form class="form-inline" action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	    <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
+	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
+	  </form>
+	</div>
+	<!--End mc_embed_signup-->
+
+
 	</div>
       </div>
 
