--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Template &middot; Bootstrap</title>
+    <title>Machine Learning in Practice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -89,33 +89,11 @@
         <!-- <a class="btn btn-large btn-success" href="#">Sign up today</a> -->
       </div>
 
-<!-- <\!-- Begin MailChimp Signup Form -\-> -->
-<!-- <div id="mc_embed_signup"> -->
-<!-- <form action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> -->
-<!--   <h2>Subscribe to our mailing list</h2> -->
-<!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
-<!-- <div class="mc-field-group"> -->
-<!--   <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span> -->
-<!-- </label> -->
-<!--   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"> -->
-<!-- </div> -->
-<!-- <div id="mce-responses" class="clear"> -->
-<!--   <div class="response" id="mce-error-response" style="display:none"></div> -->
-<!--   <div class="response" id="mce-success-response" style="display:none"></div> -->
-<!-- </div><div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
-<!-- </form> -->
-<!-- </div> -->
-
-<!-- <\!--End mc_embed_signup-\-> -->
-
       <div class="row-fluid marketing">
 	<div class="span4">
 	  <h4>Free e-book</h4>
 	  <p> <i>Seven Steps to Success: Machine Learning in
 	      Practice</i> </p>
-	  <!--   details a practical approach to applying -->
-	  <!-- machine learning in your organisation, based on years of -->
-	  <!-- experience applying machine learning in industry.</p> -->
 	</div>
 
 	<div class="span4">
@@ -129,22 +107,25 @@
 	  <p>Related events and opportunities
 	  </p>
 	</div>
-
       </div>
 
       <div class="row-fluid jumbotron">
 
 	<!-- Begin MailChimp Signup Form -->
-	<div id="mc_embed_signup">
-	  <form class="form-inline" action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<div id="mc_embed_signup" class="signup">
+	  <form class="form-inline" action="http://github.us6.list-manage.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
+	    <input type="text" value="" name="FNAME" placeholder="First name" class="" id="mce-FNAME">
 	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
 	  </form>
 	  <p><i>You will receive a link to your free e-book on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time. Not sure yet? Read the first chapter below.</i></p>
 	</div>
 	<!--End mc_embed_signup-->
-	<!-- <div class="span4"> -->
-	<!-- </div> -->
+
+	<div class="thanks" style="display:none">
+	  <p><i>Thanks for signing up. We've sent you a link to your free e-book.</i></p>
+	</div>
+
       </div>
       <hr>
       <div class="row-fluid">
@@ -260,17 +241,24 @@ reading them all.&rdquo;</p>
 	<h4>6. Mitigate risks</h4>
 	<h4>7. Use common sense</h4>
 	<hr>
+	</div>
+      <div class="row-fluid jumbotron">
 	<!-- Begin MailChimp Signup Form -->
-	<div id="mc_embed_signup">
-	  <form class="form-inline" action="http://github.us6.list-manage1.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<div id="mc_embed_signup" class="signup">
+	  <form class="form-inline" action="http://github.us6.list-manage.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
+	    <input type="text" value="" name="FNAME" placeholder="First name" class="" id="mce-FNAME">
 	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
 	  </form>
+	  <p><i>You will receive a link to your free e-book on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time.</i></p>
 	</div>
 	<!--End mc_embed_signup-->
-
-
+	<div class="thanks" style="display:none">
+	  <p><i>Thanks for signing up. We've sent you a link to your free e-book.</i></p>
 	</div>
+      </div>
+
+
       </div>
 
       <hr>
@@ -283,19 +271,17 @@ reading them all.&rdquo;</p>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap-transition.js"></script>
-    <script src="js/bootstrap-alert.js"></script>
-    <script src="js/bootstrap-modal.js"></script>
-    <script src="js/bootstrap-dropdown.js"></script>
-    <script src="js/bootstrap-scrollspy.js"></script>
-    <script src="js/bootstrap-tab.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-popover.js"></script>
-    <script src="js/bootstrap-button.js"></script>
-    <script src="js/bootstrap-collapse.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/bootstrap-typeahead.js"></script>
+    <!-- <script src="js/bootstrap.js"></script> -->
+    <script>
+      $(window).load(function() {
+        if (window.location.hash == "#thanks") {
+          $(".signup").hide();
+          $(".thanks").show();
+        }
+      });
+    </script>
 
   </body>
 </html>
