Fix some div orderings, add about section

--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -240,9 +240,11 @@ reading them all.&rdquo;</p>
 	<h4>5. Avoid premature optimisation</h4>
 	<h4>6. Mitigate risks</h4>
 	<h4>7. Use common sense</h4>
-	<hr>
-	</div>
+      </div>
+      </div>
+      <!-- <div class="span2"></div> -->
       <div class="row-fluid jumbotron">
+	<hr>
 	<!-- Begin MailChimp Signup Form -->
 	<div id="mc_embed_signup" class="signup">
 	  <form class="form-inline" action="http://github.us6.list-manage.com/subscribe/post?u=3fe77eb5fe&amp;id=8a59f91b7a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -256,8 +258,15 @@ reading them all.&rdquo;</p>
 	<div class="thanks" style="display:none">
 	  <p><i>Thanks for signing up. We've sent you a link to your free e-book.</i></p>
 	</div>
+	<hr>
       </div>
 
+      <div class="row-fluid">
+	<div class="span2"></div>
+	<div class="span8">
+	  <h2>About the Author</h2>
+
+	</div>
 
       </div>
 
