Add about section

--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -74,7 +74,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <!-- <li><a href="#">Contact</a></li> -->
         </ul>
         <h3 class="muted">Machine Learning in Practice</h3>
       </div>
@@ -265,6 +265,22 @@ reading them all.&rdquo;</p>
 	<div class="span2"></div>
 	<div class="span8">
 	  <h2>About the Author</h2>
+
+	  <p>Hi, I'm Daoud Clarke. I wrote this book as a summary of my
+	  experiences applying machine learning in industry. I
+	  currently lead development of text mining solutions at the
+	  <a href="http://www.gorkana.com">Gorkana Group</a>, and I
+	  also work part time as a researcher at
+	  the <a href="http://www.sussex.ac.uk">University of
+	  Sussex</a>.</p>
+
+	  <!-- Daoud Clarke works at -->
+	  <!-- the <a href="http://www.gorkana.com">Gorkana Group<a/>, -->
+	  <!-- where he leads the development of text mining solutions -->
+	  <!-- across the Group. He has five years experience as a software -->
+	  <!-- engineer, and has a PhD in Computational Linguistics from -->
+	  <!-- the University of Sussex, where he also works part time as a -->
+	  <!-- researcher. -->
 
 	</div>
 
