Change e-book to guide

--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -91,7 +91,7 @@
 
       <div class="row-fluid marketing">
 	<div class="span4">
-	  <h4>Free e-book</h4>
+	  <h4>Free guide</h4>
 	  <p> <i>Seven Steps to Success: Machine Learning in
 	      Practice</i> </p>
 	</div>
@@ -118,12 +118,12 @@
 	    <input type="text" value="" name="FNAME" placeholder="First name" class="" id="mce-FNAME">
 	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
 	  </form>
-	  <p><i>You will receive a link to your free e-book on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time. Not sure yet? Read the first chapter below.</i></p>
+	  <p><i>You will receive a link to your free guide on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time. Not sure yet? Read the beginning of the guide below.</i></p>
 	</div>
 	<!--End mc_embed_signup-->
 
 	<div class="thanks" style="display:none">
-	  <p><i>Thanks for signing up. We've sent you a link to your free e-book.</i></p>
+	  <p><i>Thanks for signing up. We've sent you a link to your free guide.</i></p>
 	</div>
 
       </div>
@@ -252,11 +252,11 @@ reading them all.&rdquo;</p>
 	    <input type="text" value="" name="FNAME" placeholder="First name" class="" id="mce-FNAME">
 	    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success">
 	  </form>
-	  <p><i>You will receive a link to your free e-book on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time.</i></p>
+	  <p><i>You will receive a link to your free guide on subscription. We promise we will not give away or sell your details; you can unsubscribe at any time.</i></p>
 	</div>
 	<!--End mc_embed_signup-->
 	<div class="thanks" style="display:none">
-	  <p><i>Thanks for signing up. We've sent you a link to your free e-book.</i></p>
+	  <p><i>Thanks for signing up. We've sent you a link to your free guide.</i></p>
 	</div>
 	<hr>
       </div>
