--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -57,13 +57,21 @@
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
     <![endif]-->
+    
+    <script type="text/javascript">
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="ico/favicon.png">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-39051827-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+    </script>
+
   </head>
 
   <body>
@@ -73,7 +81,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#about">About</a></li>
           <!-- <li><a href="#">Contact</a></li> -->
         </ul>
         <h3 class="muted">Machine Learning in Practice</h3>
@@ -261,7 +269,7 @@ reading them all.&rdquo;</p>
 	<hr>
       </div>
 
-      <div class="row-fluid">
+      <div class="row-fluid" id="about">
 	<div class="span2"></div>
 	<div class="span8">
 	  <h2>About the Author</h2>
@@ -272,15 +280,9 @@ reading them all.&rdquo;</p>
 	  <a href="http://www.gorkana.com">Gorkana Group</a>, and I
 	  also work part time as a researcher at
 	  the <a href="http://www.sussex.ac.uk">University of
-	  Sussex</a>.</p>
-
-	  <!-- Daoud Clarke works at -->
-	  <!-- the <a href="http://www.gorkana.com">Gorkana Group<a/>, -->
-	  <!-- where he leads the development of text mining solutions -->
-	  <!-- across the Group. He has five years experience as a software -->
-	  <!-- engineer, and has a PhD in Computational Linguistics from -->
-	  <!-- the University of Sussex, where he also works part time as a -->
-	  <!-- researcher. -->
+	  Sussex</a>. My name
+	  is <a href="http://www.google.co.uk/search?q=daoud+clarke">quite
+	  googleable</a>.</p>
 
 	</div>
 
