Change book to guide

--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -274,7 +274,7 @@ reading them all.&rdquo;</p>
 	<div class="span8">
 	  <h2>About the Author</h2>
 
-	  <p>Hi, I'm Daoud Clarke. I wrote this book as a summary of my
+	  <p>Hi, I'm Daoud Clarke. I wrote this guide as a summary of my
 	  experiences applying machine learning in industry. I
 	  currently lead development of text mining solutions at the
 	  <a href="http://www.gorkana.com">Gorkana Group</a>, and I
