Add link to hacker news post

--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -132,6 +132,7 @@
 
 	<div class="thanks" style="display:none">
 	  <p><i>Thanks for signing up. We've sent you a link to your free guide.</i></p>
+	  <p><i> If you like this, please consider upvoting on <a href="http://news.ycombinator.com/item?id=5344182">Hacker News.</a></i></p>
 	</div>
 
       </div>
@@ -265,6 +266,7 @@ reading them all.&rdquo;</p>
 	<!--End mc_embed_signup-->
 	<div class="thanks" style="display:none">
 	  <p><i>Thanks for signing up. We've sent you a link to your free guide.</i></p>
+	  <p><i> If you like this, please consider upvoting on <a href="http://news.ycombinator.com/item?id=5344182">Hacker News.</a></i></p>
 	</div>
 	<hr>
       </div>
