--- a/machine-learning-practice.html
+++ b/machine-learning-practice.html
@@ -249,6 +249,7 @@ reading them all.&rdquo;</p>
 	<h4>5. Avoid premature optimisation</h4>
 	<h4>6. Mitigate risks</h4>
 	<h4>7. Use common sense</h4>
+	<p> Or download <a href="guide.pdf">here</a> if you don't want to sign up.</p>
       </div>
       </div>
       <!-- <div class="span2"></div> -->
